crates/lk-cli/tests/snapshots/behaviour__config_schema_path.snap
---
source: crates/lk-cli/tests/behaviour.rs
expression: "observe(staged.path(), argv)"
---
exit: 0
--- stdout ---
<staged>/corpus/./vault/wiki/AGENTS.md
--- stderr ---
