crates/lk-cli/tests/snapshots/behaviour__config_vault_root.snap
---
source: crates/lk-cli/tests/behaviour.rs
expression: "observe(staged.path(), argv)"
---
exit: 0
--- stdout ---
<staged>/corpus/./vault
--- stderr ---
