crates/lk-cli/tests/snapshots/behaviour__extract_status.snap
---
source: crates/lk-cli/tests/behaviour.rs
expression: "observe(staged.path(), argv)"
---
exit: 0
--- stdout ---
No extraction manifests — `/lore-extract scan <repo>` writes the first.
--- stderr ---
