crates/lk-cli/tests/snapshots/behaviour__graph_broken.snap
---
source: crates/lk-cli/tests/behaviour.rs
expression: "observe(staged.path(), argv)"
---
exit: 1
--- stdout ---
  wiki/concepts/guard-population -> wiki/concepts/nowhere (not found)
1 broken link(s)
--- stderr ---
