crates/lk-cli/tests/snapshots/behaviour__graph_export.snap
---
source: crates/lk-cli/tests/behaviour.rs
expression: "observe(staged.path(), argv)"
---
exit: 0
--- stdout ---
nodes: 4
edges: 5
(use `lore graph --json export` for full graph data)
--- stderr ---
