crates/lk-cli/tests/snapshots/behaviour__graph_hubs.snap
---
source: crates/lk-cli/tests/behaviour.rs
expression: "observe(staged.path(), argv)"
---
exit: 0
--- stdout ---
   4 links  wiki/concepts/behaviour-snapshot (in:2 out:2)
   3 links  wiki/concepts/deterministic-clock (in:1 out:2)
   3 links  wiki/concepts/guard-population (in:2 out:1)
--- stderr ---
